--- a/package.json
+++ b/package.json
@@ -7,49 +7,49 @@
     "start": "webpack-dev-server --env.mode development --config ./webpack/config.js",
     "build": "webpack --env.mode production --config ./webpack/config.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -r https://github.com/yu1iia/goit-js-hw-10-food-service"
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yu1iia/goit-js-hw-10-food-service"
+    "url": "git+https://github.com/TetianaProshyna/goit-js-hw-10-food-service.git"
   },
   "keywords": [],
-  "author": "Yuliia Burko <yuliia.burko@gmail.com>",
+  "author": "Tetiana Proshyna <mollinne2@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/yu1iia/goit-js-hw-10-food-service"
+    "url": "https://github.com/TetianaProshyna/goit-js-hw-10-food-service/issues"
   },
-  "homepage": "https://yu1iia.github.io/goit-js-hw-10-food-service/",
+  "homepage": "https://tetianaproshyna.github.io/goit-js-hw-10-food-service/",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/core": "^7.12.16",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/preset-env": "^7.12.16",
     "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
-    "file-loader": "^6.1.0",
+    "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "gh-pages": "^3.1.0",
     "handlebars-loader": "^1.7.1",
-    "html-loader": "^1.3.1",
-    "html-webpack-plugin": "^4.5.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.1",
     "img-loader": "^3.0.2",
-    "mini-css-extract-plugin": "^0.11.2",
+    "mini-css-extract-plugin": "^0.11.3",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss-loader": "^4.0.2",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^1.2.1",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.44.2",
+    "postcss-loader": "^4.2.0",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^1.3.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.4",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3",
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "core-js": "^3.8.3",
     "handlebars": "^4.7.6"
   }
 }
